# c_graphics

./: CMakeCache.txt  CMakeLists.txt  build.sh
c_graphics/: CMakeLists.txt
c_graphics/shaders/: default.vert
c_graphics/src/: files.c  files.h  main.c
glad/: CMakeLists.txt
glad/src/: glad.c
src/: main.c  shader.c  shader.h
